--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,9 @@
 #BuildDependences
 springBootVersion=2.6.2
 springDependencyManagementVersion=1.0.11.RELEASE
+
+#ApplicationsDependencies
+apacheCommonsTextVersion=1.9
+
+#TestDependencies
+hamcrestVersion=2.2
