--- a/build.gradle
+++ b/build.gradle
@@ -40,11 +40,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 
 	//Other
-	implementation 'org.apache.commons:commons-text:1.9'
+	implementation "org.apache.commons:commons-text:${apacheCommonsTextVersion}"
 
 	//Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.hamcrest:hamcrest-library:2.2'
+	testImplementation "org.hamcrest:hamcrest-library:${hamcrestVersion}"
 }
 
 dependencyManagement {
